--- a/Intune Group Assignments/Strings/en-us/Resources.resw
+++ b/Intune Group Assignments/Strings/en-us/Resources.resw
@@ -153,4 +153,7 @@
   <data name="SettingsPage_PrivacyTermsLink.NavigateUri" xml:space="preserve">
     <value>https://YourPrivacyUrlGoesHere/</value>
   </data>
+  <data name="Shell_AllData.Content" xml:space="preserve">
+    <value>All Data</value>
+  </data>
 </root>
